# moflow

./: README.md
BAP-0.7-moflow/: Makefile.in  README  STYLE.ocaml  build_everything.sh  configure.ac
BAP-0.7-moflow/autom4te.cache/: requests  traces.1
BAP-0.7-moflow/batteries/: Makefile
BAP-0.7-moflow/custom_utils/: .depend  ilprint.sh  makefile  motriage.ml  snapshot.format.txt
BAP-0.7-moflow/custom_utils/demo/: demo.c  trace.sh
BAP-0.7-moflow/custom_utils/egas/: apps.ml  branches.ml  common.ml  egas.ml  export.ml  heap.ml  heap.mli  makefile  mylazy.ml  oracle.ml  readme.txt  space.ml  stats.ml
BAP-0.7-moflow/custom_utils/egas/test/: bof1.c
BAP-0.7-moflow/custom_utils/tests/: makefile  old_test.asm  test.asm
BAP-0.7-moflow/doc/chap-examples/: traces.tex
BAP-0.7-moflow/doc/chap-formalism/: operational-semantics-table.tex
BAP-0.7-moflow/doc/chap-intro/: intro.tex
BAP-0.7-moflow/doc/chap-tools/: discussion.tex  iltrans.tex  other-utils.tex  toil.tex
BAP-0.7-moflow/libasmir/: Makefile.in  config.h.in
BAP-0.7-moflow/libasmir/apps/: Makefile.am
BAP-0.7-moflow/libasmir/src/: Makefile.am  Makefile.in
BAP-0.7-moflow/libasmir/src/traces/: pin_taint.cpp  pin_taint.h
BAP-0.7-moflow/libtracewrap/libtrace/: AUTHORS  configure.ac
BAP-0.7-moflow/libtracewrap/libtrace/autom4te.cache/: output.0  traces.0
BAP-0.7-moflow/libtracewrap/libtrace/piqi/: Makefile
BAP-0.7-moflow/libtracewrap/libtrace/piqi-files/: blockframe.piqi  callframe.piqi  exceptionframe.piqi  frame.piqi  frame.piqi.pb.h  frame_piqi.ml  keyframe.piqi  metadataframe.piqi  modloadframe.piqi  retframe.piqi  taintintroframe.piqi
BAP-0.7-moflow/libtracewrap/libtrace/protobuf/: aclocal.m4  configure
BAP-0.7-moflow/libtracewrap/libtrace/src/: Makefile.am  Makefile.in
BAP-0.7-moflow/objsize-0.16/: objsize.ml
BAP-0.7-moflow/objsize-0.16/ocamlsrc/byterun/: compatibility.h  freelist.h  minor_gc.h  misc.h
BAP-0.7-moflow/ocaml/: Makefile.in  OCamlMakefile  arithmetic.ml  asmir.ml  asmir.mli  asmir_rdisasm.ml  asmir_rdisasm.mli  asmir_vars.ml  ast.ml  ast_convenience.ml  ast_mapper.ml  ast_slice.ml  ast_visitor.ml  ast_visitor.mli  big_int_convenience.ml  cfg.ml  cfg.mli  cfg_ast.ml  cfg_ast.mli  cfg_pp.ml  cfg_ssa.mli  checks.mli  coalesce.mli  cvc3_lexer.mll  debug.ml  debug.mli  debug_snippets.ml  disasm_i386.ml  dominator.ml  formulap.ml  func_boundary.mli  fwp.ml  fwp.mli  grammar.mly  grammar_private_scope.ml  grammar_scope.ml  graphDataflow.ml  input.ml  libasmir.idl  llvm_codegen.ml  (+32 more)
BAP-0.7-moflow/ocaml/piqi/: ast_piqi.mli  stmt_piqi.ml  stmt_piqi_ext.ml
BAP-0.7-moflow/ocamlgraph-1.8/: CHANGES  Makefile.in  configure  configure.in
BAP-0.7-moflow/ocamlgraph-1.8/src/: builder.ml  builder.mli  cliquetree.ml  dot.ml  gmap.mli  gml.mli  md.mli  minsep.ml  path.ml  sig.mli  sig_pack.mli  strat.ml  strat.mli  topological.ml
BAP-0.7-moflow/ounit/: INSTALL.txt  Makefile  _oasis  bootstrap.lua  myocamlbuild.ml
BAP-0.7-moflow/ounit/examples/: Makefile
BAP-0.7-moflow/ounit/src/: oUnit.mli
BAP-0.7-moflow/pcre-ocaml/lib/: Makefile
BAP-0.7-moflow/pintraces/: Makefile  ctxtest.cpp  gentrace.cpp  getpin.sh  makefile.rules  pin_misc.cpp  pin_misc.h  pin_taint.cpp  snapshot.cpp  snapshot.h
BAP-0.7-moflow/piqi-files/: Makefile  exp.piqi  stmt.piqi  type.piqi
BAP-0.7-moflow/piqi-files/protobuf/: StmtPiqi.java
BAP-0.7-moflow/solvers/: getz3.sh
BAP-0.7-moflow/tests/: Makefile.in  bap_suite.ml  disasm_i386_suite.ml  dominator_suite.ml  eval_suite.ml  il_suite.ml  traces_suite.ml  var_suite.ml
BAP-0.7-moflow/tests-proj.example/: Makefile
BAP-0.7-moflow/tests/C/: Makefile.defs  bof1.c  taint_test.c  test.c
BAP-0.7-moflow/tests/asm/: Makefile  nop.S
BAP-0.7-moflow/utils/: Makefile.in  formula.ml  get_functions.ml  iltrans.ml  streamtrans.ml  topredicate.ml
BAP-0.7-moflow/zarith-1.0/: Changes  bitest.ml  caml_z_i686.S  caml_z_x86_64.S  configure  q.ml  test.ml  z.mlip
Triage/bap-0.7-moflow/: INSTALL  Makefile.am  NEWS  TODO  autogen.sh  build_everything.sh  configure
Triage/bap-0.7-moflow/autom4te.cache/: output.1  traces.0
Triage/bap-0.7-moflow/custom_utils/: common.ml  ilprint.sh  makefile  prep-slice.sh  readme.txt  slicer.ml  triage.sh
Triage/bap-0.7-moflow/custom_utils/demo/: input.txt  makefile  trace.sh
Triage/bap-0.7-moflow/custom_utils/tests/: input.txt  test.c  trace.sh
Triage/bap-0.7-moflow/doc/: Makefile  code.sty  credits.tex  main.tex
Triage/bap-0.7-moflow/doc/bibtex/: biblio.bib
Triage/bap-0.7-moflow/doc/chap-developer/: overview.tex
Triage/bap-0.7-moflow/doc/chap-examples/: conceval.tex  il.tex
Triage/bap-0.7-moflow/libtracewrap/: Makefile.in
Triage/bap-0.7-moflow/m4/: ac_ocaml.m4
Triage/bap-0.7-moflow/objsize-0.16/: Makefile  c_objsize.c  objsize.mli  tests.ml
Triage/bap-0.7-moflow/ocaml/: asmir.ml  asmir.mli  asmir_consts.ml  ast_mapper.mli  cfg_ssa.ml  checks.ml  coalesce.ml  cvc3_grammar.mly  deadcode.ml  deadcode.mli  depgraphs.ml  depgraphs.mli  disasm.ml  disasm_i386.ml  flatten_mem.ml  flatten_mem.mli  func_boundary.ml  gcl.ml  gcl.mli  graphDataflow.mli  hacks.ml  input.ml  input.mli  lexer.mll  libbfd.idl  llvm_codegen.mli  memory2array.ml  parser.ml  pp.ml  reachable.mli  sccvn.ml  smtexec.ml  smtlib1.ml  solver.ml  solver.mli  ssa.ml  ssa_visitor.ml  stp.ml  stp_grammar.mly  stp_lexer.mll  (+23 more)
Triage/bap-0.7-moflow/ocamlgraph-1.8/: Makefile.in
Triage/bap-0.7-moflow/ounit/: _tags  changelog  ci-main.lua  setup.ml
Triage/bap-0.7-moflow/pcre-ocaml/: Makefile
Triage/bap-0.7-moflow/pintraces/: cache.h  gentrace.cpp  getpin.sh  listregs.cpp  makefile.rules  pin_taint.cpp  pivot.cpp  pivot.h  snapshot.cpp
Triage/bap-0.7-moflow/tests/: arithmetic_suite.ml  asmir_suite.ml  ast_suite.ml  predicate_suite.ml  traces_suite.ml  unroll_suite.ml
Triage/bap-0.7-moflow/tests-proj.example/: README  project_suite.ml
Triage/bap-0.7-moflow/utils/: backtaint.ml  codegen.ml  ileval.ml  solvepredicate.ml  toil.ml
Triage/bap-0.7-moflow/zarith-1.0/: META  Makefile  README  caml_z.c  caml_z_x86_64_mingw64.S  project.mak  q.mli  z.mlp  z_pp.pl
(+420 files in other folders)
